--- a/vite3-vue3-antd-ts/src/styles/global.css
+++ b/vite3-vue3-antd-ts/src/styles/global.css
@@ -1,52 +1,54 @@
-html, body, #app, .full-height {
-    height: 100%;
+html,
+body,
+#app,
+.full-height {
+  height: 100%;
 }
 
 .shadow {
-    box-shadow: 0 1px 4px #00152914;
+  box-shadow: 0 1px 4px #00152914;
 }
-
 
 /*---滚动条默认显示样式--*/
 ::-webkit-scrollbar-thumb {
-    height: 50px;
-    outline-offset: -2px;
-    outline: 0px solid #fff;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    border: 2px solid #eee;
+  height: 50px;
+  outline-offset: -2px;
+  outline: 0px solid #fff;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 2px solid #eee;
 }
 /*---鼠标点击滚动条显示样式--*/
 ::-webkit-scrollbar-thumb:hover {
-    height: 50px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
+  height: 50px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
 /*---滚动条大小--*/
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 8px;
+  width: 10px;
+  height: 8px;
 }
 /*---滚动框背景样式--*/
 ::-webkit-scrollbar-track-piece {
-    -webkit-border-radius: 0;
-    border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 /* 滚动条的滑轨背景颜色 */
 ::-webkit-scrollbar-track {
-    background-color: #eee;
+  background-color: #eee;
 }
 /* 滑块颜色 */
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 /* 滑轨两头的监听按钮颜色及大小 */
 ::-webkit-scrollbar-button {
-    background-color: #eee;
-    height: 0;
-    width: 0;
+  background-color: #eee;
+  height: 0;
+  width: 0;
 }
 /* 横向滚动条和纵向滚动条相交处尖角的颜色 */
 ::-webkit-scrollbar-corner {
-    background-color: black;
+  background-color: black;
 }
